--- a/src/content/docs/en/guides/rss.mdx
+++ b/src/content/docs/en/guides/rss.mdx
@@ -230,6 +230,23 @@ rss({
 If you'd prefer not to create your own stylesheet, you may use a premade stylesheet such as the [Pretty Feed v3 default stylesheet](https://github.com/genmon/aboutfeeds/blob/main/tools/pretty-feed-v3.xsl). Download the stylesheet from GitHub and save into your project's `public/` directory.
 :::
 
+## Enabling auto-discovery of your RSS feed
+
+RSS autodiscovery, [as explained by the RSS Advisory Board](https://www.rssboard.org/rss-autodiscovery), is "a technique that makes it possible for browsers and other software to automatically find a site's RSS feed."
+
+All you need to do is add a `link` tag to your site's `head` element, like so:
+
+```html
+<link
+    rel="alternate"
+    type="application/rss+xml"
+    title="Your Site's Title"
+    href={`${Astro.site}rss.xml`}
+/>
+```
+
+After you've done this, your readers can put your site's base URL into their RSS reader to subscribe to your posts, without having to find the specific URL of your RSS feed!
+
 ## Next Steps
 
 After visiting your feed in the browser at `your-domain.com/rss.xml` and confirming that you can see data for each of your posts, you can now [promote your feed on your website](https://medium.com/samsung-internet-dev/add-rss-feeds-to-your-website-to-keep-your-core-readers-engaged-3179dca9c91e#:~:text=com/~deno%2Drss-,Advertising%20your%20RSS%20feed,-Now%20you%20have). Adding the standard RSS icon to your site lets your readers know that they can subscribe to your posts in their own feed reader.
